update 7 and removed schedule

--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -476,7 +476,7 @@
 
     <div class="ui-g-12">
         <p-panel header="CALENDAR"  [style]="{'height':'100%'}">
-            <p-schedule [events]="events" defaultDate="2016-01-12"></p-schedule>
+            <p-fullCalendar [events]="events" [options]="fullcalendarOptions" ></p-fullCalendar>
         </p-panel>
     </div>
 
