override files added

--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -305,7 +305,7 @@ sass src/assets/theme-myown/theme.scss src/assets/theme-myown/theme.css
             <p>Watch mode is handy to avoid compiling everytime when a change is made, instead use the following command
             so that sass generates the file whenever you make a customization. This builds all css files whenever a change is made to any scss file.</p>
 <pre>
-sass -w resources/ --sourcemap=none
+sass --watch src/:src/ --no-source-map
 </pre>
 
             <p>Same can also be applied to layout itself;</p>
