--- a/src/assets/sass/layout/_layout.scss
+++ b/src/assets/sass/layout/_layout.scss
@@ -1,4 +1,5 @@
 @import '_variables';
+@import '../overrides/_layout_variables';
 @import '../_mixins';
 @import '../_fonts';
 @import './_utils';
@@ -8,3 +9,4 @@
 @import './_landing';
 @import './_splash';
 @import './_main';
+@import '../overrides/_layout_styles';
