--- a/src/assets/sass/theme/_theme.scss
+++ b/src/assets/sass/theme/_theme.scss
@@ -1,4 +1,5 @@
 @import '_variables';
+@import '../overrides/_theme_variables';
 @import '../_mixins';
 @import '_common';
 @import '_forms';
@@ -8,3 +9,4 @@
 @import '_overlays';
 @import '_menus';
 @import '_misc';
+@import '../overrides/_theme_styles';
