--- a/src/assets/sass/theme/_data.scss
+++ b/src/assets/sass/theme/_data.scss
@@ -777,4 +777,12 @@ body {
             }
         }
     }
+
+    .ui-virtualscroller {
+        .ui-virtualscroller-list {
+            li {
+                border-bottom: 1px solid $contentBorderColor;
+            }
+        }
+    }
 }
