--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -3,7 +3,7 @@
         <div class="card docs">
 
             <h1>Current Version</h1>
-            <p>Angular 6.0 and PrimeNG 6.0</p>
+            <p>Angular 7 and PrimeNG 7</p>
 
             <h1>Getting Started</h1>
             <p>Paradise is a true native application template for Angular and is distributed as a CLI project. If you don't have CLI installed already run the following commands to set it up. In case
@@ -458,9 +458,23 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'orange-badge'
             <p>Paradise uses PrimeNG Grid CSS (ui-g-*) throughout the samples, we strongly suggest using Grid CSS as your layout framework as it is well tested and supported by PrimeNG. Grid CSS is
             available inside primeng.css.</p>
 
+            <h1>Customizing Styles</h1>
+            <p>It is suggested to add your customizations in the following sass files under the override folder instead of adding them to the
+                scss files under sass folder to avoid maintenance issues after an update.</p>
+
+            <ul>
+                <li><b>_layout_variables</b>: Variables of the layout.</li>
+                <li><b>_layout_styles</b>: Styles for the layout.</li>
+                <li><b>_theme_variables</b>: Variables of the theme.</li>
+                <li><b>_theme_styles</b>: Styles for the theme.</li>
+            </ul>
+
             <h1>Migration Guide</h1>
-            <p>For seamless updates and easier maintenance, we suggest keeping your CSS customizations in a separate sass file so that your changes
-            are not overriden with an update.</p>
+            <h4>6.1.0 to 7.0.0</h4>
+            <ul>
+                <li>Update layout css files.</li>
+                <li>Update theme css files.</li>
+            </ul>
 
             <h4>6.0.0 to 6.1.0</h4>
             <p>Adds support for new features in PrimeNG 6.1.x</p>
