--- a/src/app/demo/view/dashboard.component.html
+++ b/src/app/demo/view/dashboard.component.html
@@ -188,7 +188,7 @@
         <p-panel header="CONTACT US" [style]="{'min-height':'360px'}">
             <div class="ui-g">
                 <div class="ui-g-12">
-                    <p-dropdown [options]="cities" [autoWidth]="false" [(ngModel)]="selectedCity"></p-dropdown>
+                    <p-dropdown [options]="cities" [(ngModel)]="selectedCity"></p-dropdown>
                 </div>
                 <div class="ui-g-12">
                     <input type="text" pInputText placeholder="Name" >
