--- a/src/app/demo/view/documentation.component.html
+++ b/src/app/demo/view/documentation.component.html
@@ -3,7 +3,7 @@
         <div class="card docs">
 
             <h1>Current Version</h1>
-            <p>Angular 7 and PrimeNG 7</p>
+            <p>Angular 8 and PrimeNG 8</p>
 
             <h1>Getting Started</h1>
             <p>Paradise is a true native application template for Angular and is distributed as a CLI project. If you don't have CLI installed already run the following commands to set it up. In case
@@ -470,6 +470,15 @@ label: 'Components', icon: 'list', badge: '2', badgeStyleClass: 'orange-badge'
             </ul>
 
             <h1>Migration Guide</h1>
+            <h4>7.0.0 to 8.0.0</h4>
+            <ul>
+                <li>Update your project to Angular 8 with ng update. View the official update guide -<a href="https://update.angular.io/">https://update.angular.io/</a>- for more information.</li>
+                <li>Update app.component.ts.</li>
+                <li>Update app.menu.component.ts.</li>
+                <li>Update layout css files.</li>
+                <li>Update theme css files.</li>
+            </ul>
+
             <h4>6.1.0 to 7.0.0</h4>
             <ul>
                 <li>Update layout css files.</li>
