--- a/src/assets/sass/theme/_common.scss
+++ b/src/assets/sass/theme/_common.scss
@@ -9,7 +9,7 @@ body {
         background-color: $contentBgColor;
         border: 1px solid $contentBorderColor;
     }
-    
+
     .ui-widget-header {
         background-color: $headerBgColor;
         color: $headerTextColor;
@@ -21,22 +21,22 @@ body {
         background-color: $primaryColor;
         color: $primaryTextColor;
     }
-    
+
     .ui-state-error, .ui-state-default.ui-state-error {
         border: solid 1px $inputInvalidBorderColor;
     }
-    
+
     .ui-icon {
         width: $iconWidth;
     }
 
     .ui-state-disabled,
     .ui-widget:disabled {
-        opacity: .35; 
-        filter: Alpha(Opacity= 35); 
-        background-image: none; 
+        opacity: .35;
+        filter: Alpha(Opacity= 35);
+        background-image: none;
         cursor: default !important;
-        
+
         * {
             cursor: default !important;
         }
@@ -63,14 +63,13 @@ body {
     }
 
     .ui-widget-overlay {
-        background-color: #424242;
-        @include opacity(.7);
+        background-color: rgb(0, 0, 0, 0.4);
     }
-    
+
     a {
         color: darken($primaryColor,10%);
         text-decoration: none;
-        
+
         &:hover {
             color: darken($primaryColor,10%);
         }
